--- a/Gravasync/src/main/res/values/strings.xml
+++ b/Gravasync/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Gravasync</string>
     <string name="action_settings">Settings</string>
     <string name="sync">Sync Now</string>
+    <string name="downloading_status">Checking Gravatar for %1$d contacts\' avatars</string>
+    <string name="progress">Downloaded Gravatar for \n%1$s. %2$d/%3$d</string>
+    <string name="finished_status">Finished syncing</string>
 
 </resources>
